Fixed bug with Neon Fire colors not changing for dark mode

--- a/assets/v2/neon/neon-fire-vars.scss
+++ b/assets/v2/neon/neon-fire-vars.scss
@@ -18,6 +18,7 @@ $theme-text-on-accent-color-color: #fff;
     --theme-text-on-accent-color-color: $theme-text-on-accent-color-color,
 ));
 
+$css-vars-at-root: false;
 
 .brightness-dark,
 .brightness-black {
